# huggingface-course

./: .env  .gitignore  CLAUDE.md  README.md  README_goal_classifier.md  app.py  list_model.ipynb  model_listing.py  pyproject.toml  requirements.txt  sentiment_analysis_pipeline.py
.ipynb_checkpoints/: list_model-checkpoint.ipynb
goal_data/: partial_smart_goals.txt  smart_goals.txt  vague_goals.txt
notebooks/: Untitled.ipynb  template.ipynb
scripts/: __init__.py  list_models.py  sentiment_analysis.py  sentiment_analysis_pipeline.py
src/: __init__.py  embeddings.py  goal_classifier.py  goal_classifier_app.py  login_and_upload.py  model_info.py  model_listing.py  sentiment_analysis.py  sentiment_analysis_pipeline.py  upload_model_to_hub.py
