[project]
name = "huggingface-course"
version = "0.1.0"
description = ""
authors = [
    {name = "satish",email = "satish.manit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub (>=0.29.3,<0.30.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=3.4.0,<4.0.0)",
    "tokenizers (>=0.21.1,<0.22.0)",
    "torch (>=2.6.0,<3.0.0)",
    "scikit-learn (>=1.4.0,<2.0.0)",
    "accelerate (>=0.26.0,<0.27.0)",
    "sentence-transformers (>=2.2.2,<3.0.0)",
    "gradio (>=5.22.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
